@@ -1,3 +1,6 @@
+2014-08-30  Kirit Saelensminde  <kirit@felspar.com>
+ The `fostlib::accessors` now use perfect forwarding if `FOST_HAS_MOVE` is defined.
+
 2014-05-31  Kirit Saelensminde  <kirit@felspar.com>
  Redesign the way that threads are handled to try to improve reliability when things go wrong, especially with C++11.
  Change the output streaming for `fostlib::string` to use the underlying platform implementation.
